# Waste-Bot

./: .gitignore  README.md  bot.py  common.py  db.py  pyproject.toml  quickplagiarism.py  requirements.txt  translations.yml
conversations/: newUser.py  photoId.py
coversations/: __init__.py  newUser.py
database/: crud.py  database.py  models.py
