[tool.poetry]
name = "Waste-Bot"
version = "0.1.0"
description = ""
authors = ["hkn"]

[tool.poetry.dependencies]
python = "^3.8"
python-telegram-bot = "^13.5"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
