[tool.poetry]
name = "Waste-Bot"
version = "0.1.0"
description = ""
authors = ["hkn"]

[tool.poetry.dependencies]
python = "^3.8"
python-telegram-bot = "^13.5"
PyYAML = "^5.4.1"
SQLAlchemy = "^1.4.26"
psycopg2 = "^2.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
